force-app/main/default/objects/Apttus_Config2__ConfigSettings__c/fields/Apttus_Config2__DisplayActionSettings__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisplayActionSettings__c</fullName>
    <label>Display Action Settings</label>
    <length>64768</length>
    <type>LongTextArea</type>
</CustomField>