force-app/main/default/objects/Apttus_Config2__ConfigSettings__c/fields/Apttus_Config2__Flow__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Flow__c</fullName>
    <label>Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>NGDefault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>