force-app/main/default/objects/Apttus_Config2__ConfigSettings__c/fields/Apttus_Config2__FlowSettings__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FlowSettings__c</fullName>
    <label>Flow Settings</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>