force-app/main/default/objects/Apttus_Config2__ConfigSettings__c/fields/Apttus_Config2__SystemProperties__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SystemProperties__c</fullName>
    <label>System Properties</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>